Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Blog by shendl1978</title>
+    <title>良少的专栏 by shendl1978</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -16,8 +16,8 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1 class="header">Blog</h1>
-        <p class="header">blog</p>
+        <h1 class="header">良少的专栏</h1>
+        <p class="header">技术blog</p>
 
         <ul>
           <li class="download"><a class="buttons" href="https://github.com/shendl1978/blog/zipball/master">Download ZIP</a></li>
