--- a/index.html
+++ b/index.html
@@ -1,67 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
+
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>良少的专栏 by shendl1978</title>
+    <meta charset='utf-8' />
+    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta name="description" content="良少的专栏 : 技术blog" />
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+
+    <title>良少的专栏</title>
   </head>
+
   <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">良少的专栏</h1>
-        <p class="header">技术blog</p>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/shendl1978/blog/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/shendl1978/blog/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/shendl1978/blog">View On GitHub</a></li>
-        </ul>
+    <!-- HEADER -->
+    <div id="header_wrap" class="outer">
+        <header class="inner">
+          <a id="forkme_banner" href="https://github.com/shendl1978/blog">View on GitHub</a>
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/shendl1978">shendl1978</a></p>
+          <h1 id="project_title">良少的专栏</h1>
+          <h2 id="project_tagline">技术blog</h2>
 
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/shendl1978/blog/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/shendl1978/blog/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
+    </div>
 
-      </header>
-      <section>
-        <h3>Welcome to GitHub Pages.</h3>
+    <!-- MAIN CONTENT -->
+    <div id="main_content_wrap" class="outer">
+      <section id="main_content" class="inner">
+        <h3>
+<a name="welcome-to-%E8%89%AF%E5%B0%91%E7%9A%84%E4%B8%93%E6%A0%8F" class="anchor" href="#welcome-to-%E8%89%AF%E5%B0%91%E7%9A%84%E4%B8%93%E6%A0%8F"><span class="octicon octicon-link"></span></a>Welcome to 良少的专栏.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>地址：<a href="http://shendl1978.github.io/blog/">http://shendl1978.github.io/blog/</a>
+CSDN Blog地址：<a href="http://blog.csdn.net/shendl">http://blog.csdn.net/shendl</a></p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+<h2>
+<a name="%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C" class="anchor" href="#%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C"><span class="octicon octicon-link"></span></a>参考手册</h2>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<h3>
+<a name="ubuntu%E5%91%BD%E4%BB%A4%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C-" class="anchor" href="#ubuntu%E5%91%BD%E4%BB%A4%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C-"><span class="octicon octicon-link"></span></a><a href="http://blog.csdn.net/shendl/article/details/5986753">Ubuntu命令参考手册 </a>
+</h3>
 
-<h3>Designer Templates</h3>
+<h3>
+<a name="%E6%8E%A8%E8%8D%90%E4%B8%80%E4%BA%9Blinux%E4%B8%8B%E5%B8%B8%E7%94%A8%E7%9A%84%E8%BD%AF%E4%BB%B6-" class="anchor" href="#%E6%8E%A8%E8%8D%90%E4%B8%80%E4%BA%9Blinux%E4%B8%8B%E5%B8%B8%E7%94%A8%E7%9A%84%E8%BD%AF%E4%BB%B6-"><span class="octicon octicon-link"></span></a><a href="http://blog.csdn.net/shendl/article/details/6173408">推荐一些Linux下常用的软件 </a>
+</h3>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+<h3>
+<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
 
-<h3>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
+<p>Please email to me by <a href="mailto:shendl_s@hotmail.com">shendl_s@hotmail.com</a></p>
       </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+    </div>
+
+    <!-- FOOTER  -->
+    <div id="footer_wrap" class="outer">
+      <footer class="inner">
+        <p class="copyright">良少的专栏 maintained by <a href="https://github.com/shendl1978">shendl1978</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
+
+    
+
   </body>
 </html>
