Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ CSDN Blog地址：<a href="http://blog.csdn.net/shendl">http://blog.csdn.net/she
 <a name="%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C" class="anchor" href="#%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C"><span class="octicon octicon-link"></span></a>参考手册</h2>
 
 <h3>
-<a name="ubuntu%E5%91%BD%E4%BB%A4%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C-" class="anchor" href="#ubuntu%E5%91%BD%E4%BB%A4%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C-"><span class="octicon octicon-link"></span></a><a href="http://blog.csdn.net/shendl/article/details/5986753">Ubuntu命令参考手册 </a>
+<a name="ubuntu%E5%91%BD%E4%BB%A4%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C-" class="anchor" href="#ubuntu%E5%91%BD%E4%BB%A4%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C-"><span class="octicon octicon-link"></span></a><a href="https://github.com/shendl1978/blog/wiki/Ubuntu%E5%91%BD%E4%BB%A4%E5%8F%82%E8%80%83%E6%89%8B%E5%86%8C">Ubuntu命令参考手册 </a>
 </h3>
 
 <h3>
